my profile page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         <br/>
         <p>Hi there 👋, I'm Stuart.. a fresh Web Developer based near london</p>
         <p>Aspiring to be a Freelancer to give me freedom and be my own boss!!</p>
-        <button class="main-button">click me!</button>
+        <button class="main-button">
+          <a href="https://www.bloxywebservices.co.uk/" target="_blank">
+            Visit my website!
+          </a>
+        </button>
 
       </div>
 
