--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
       <div class="container">
         <img src="./images/me.jpeg" alt="me" class="rounded-circle me-img">
           <div class="bio-text">
-            <p>Hi, I’m Stuart, a Junior developer with over 7 years of experience in client-facing roles. Prior to completing a Coding Bootcamp at Le Wagon in December 2022, I was self- taught in HTML, CSS and Javascript/React & Gatsby where I was capable of building simple websites alongside working a full-time job in another industry.</p>
+            <p>Hi, I’m Stuart, a Junior Fullstack Developer based in Hertfordshire with over 7 years of experience in client-facing roles.  Prior to completing a Coding Bootcamp with Le Wagon, I was self-taught in HTML, CSS and Javascript/React & Gatsby.  At Le Wagon, I learned a multitude of Full Stack disciplines whilst solving coding challenges with teammates, communicating through Slack and Zoom.
+            </p>
             <p>At Le Wagon, I learned a multitude of Full Stack disciplines such as Git workflows, Ruby & Ruby on Rails, Databases, Design systems, Javascript & working with APIs. Working on the course with "buddies" and teammates allowed me to experience working as a team remotely, communicating through Slack and Zoom.</p>
             <p>With a background in sales and dealing with professional clients, I look forward to the transition to becoming an effective developer with a strong understanding of client needs and expectations. With a genuine interest in Web Development, I am very excited to continue learning in the field and build a successful career.</p>
             <p>I now plan to improve my Javascript and React skills and hope to add Typescript to my skillset in the near future. I'm also keeping an eye on RemixJS which could be a valuable framework to have under my belt.</p>
