--- a/index.html
+++ b/index.html
@@ -54,93 +54,132 @@
       <div class="container">
         <img src="./images/me.jpeg" alt="me" class="rounded-circle me-img">
           <div class="bio-text">
-            <p>Hi, I’m Stuart, a Junior Fullstack Developer based in Hertfordshire with over 7 years of experience in client-facing roles.  Prior to completing a Coding Bootcamp with Le Wagon, I was self-taught in HTML, CSS and Javascript/React & Gatsby.  At Le Wagon, I learned a multitude of Full Stack disciplines whilst solving coding challenges with teammates, communicating through Slack and Zoom.
+            <p>Hi, I’m Stuart, a Junior Fullstack Developer based in Hertfordshire with over 7 years of experience in client-facing roles.  Prior to completing a Coding Bootcamp with Le Wagon, I was self-taught in <strong>HTML, CSS and Javascript, React & Gatsby</strong>.
             </p>
-            <p>At Le Wagon, I learned a multitude of Full Stack disciplines such as Git workflows, Ruby & Ruby on Rails, Databases, Design systems, Javascript & working with APIs. Working on the course with "buddies" and teammates allowed me to experience working as a team remotely, communicating through Slack and Zoom.</p>
-            <p>With a background in sales and dealing with professional clients, I look forward to the transition to becoming an effective developer with a strong understanding of client needs and expectations. With a genuine interest in Web Development, I am very excited to continue learning in the field and build a successful career.</p>
-            <p>I now plan to improve my Javascript and React skills and hope to add Typescript to my skillset in the near future. I'm also keeping an eye on RemixJS which could be a valuable framework to have under my belt.</p>
+            <p>At Le Wagon, I learned a multitude of <strong>Full Stack</strong> disciplines such as <strong>Git workflows, Ruby & Ruby on Rails, Databases, Design systems, Javascript & working with APIs</strong>. Working on the course with "buddies" and teammates allowed me to experience working as a team remotely, communicating through <strong>Slack</strong> and Zoom.</p>
+            <p>With a background in sales and dealing with professional clients, I look forward to the transition to becoming an effective developer with a strong understanding of client needs and expectations. With a genuine interest in Web Development, I am excited to continue learning in the field and build a successful career.</p>
+            <p>I'm currently working on improving my Javascript and React skills whilst adding <strong>Typescript</strong> to my skillset. I'm keeping an eye on <strong>Remix & Svelte</strong> which could be a valuable framework to have under my belt.</p>
           </div>
+      </div>
+      <!-- stack section -->
+      <div class="stack-section">
+        <div class="container">
+          <h2 class="section-heading text-center my-3">Stack</h2>
+
+          <div class="stack">
+            <img src="./images/stack-icons/HTML5.png" alt="HTML5">
+            <img src="./images/stack-icons/CSS3.png" alt="CSS3">
+            <img src="./images/stack-icons/JavaScript.png" alt="Javascript">
+            <img src="./images/stack-icons/git.png" alt="git">
+            <img src="./images/stack-icons/Github_logo_PNG1.png" alt="github">
+            <img src="./images/stack-icons/Ruby_On_Rails_Logo.png" alt="Ruby On Rails">
+            <img src="./images/stack-icons/React.png" alt="React">
+            <img src="./images/stack-icons/gatsbyjs.svg" alt="gatsbyjs">
+            <img src="./images/stack-icons/heroku.png" alt="heroku">
+            <img src="./images/stack-icons/Netlify_logo.svg" alt="netlify">
+            <img src="./images/stack-icons/cloudinary.png" alt="cloudinary">
+            <img src="./images/stack-icons/mapbox.png" alt="mapbox">
+            <img src="./images/stack-icons/sql.png" alt="sql">
+            <img src="./images/stack-icons/strapi.png" alt="strapi">
+            <img src="./images/stack-icons/styled-components.png" alt="styled-components">
+            <img src="./images/stack-icons/figma.svg" alt="figma">
+            <img src="./images/stack-icons/bootstrap.png" alt="bootstrap">
+
+            <img src="./images/stack-icons/stimulus.png" alt="stimulusJS" class="last-item">
+          </div>
+        </div>
       </div>
       <!-- projects section -->
       <div class="container">
       <h2 class="section-heading">Projects</h2>
       <!-- project 1 -->
       <div class="project-container">
-        <a href="https://www.bloxywebservices.co.uk/" target="_blank">
-          <img src="./images/bloxy.png" alt="bloxy Web Services website" class="project-screenshot">
+        <a href="https://www.materialised.shop/" target="_blank">
+          <img src="./images/materialised.png" alt="materialised website" class="project-screenshot">
         </a>
-          <div class="project-details">
-            <div class="project-text">
-              <h2>Bloxy Web Services</h2>
-              <p>My personal website which I setup before starting at Le Wagon.</p>
-              <h5>BUILT WITH:</h5>
-              <ul>
-                <li>HTML, CSS, Bootstrap</li>
-                <li>GatsbyJS (React framework)</li>
-                <li>Font Awesome</li>
-                <li>Google Analytics</li>
-              </ul>
-            </div>
-            <div class="project-links">
-              <ul class="project-icons">
-                <li>
-                  <a href="https://www.figma.com/file/avWmzwYv5EyhhBkxX4RsgY/My-Portfolio-Site?node-id=0%3A1&t=UscVUeTL5Ll7HiAK-1" target="_blank" >
-                    <i class="fa-brands fa-figma"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://github.com/sbloxy123/my-portfolio-code." target="_blank" >
-                    <i class="fa-brands fa-github"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.bloxywebservices.co.uk/" target="_blank" >
-                    <i class="fa-solid fa-globe"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <!-- project 2 -->
-        <div class="project-container">
-          <a href="https://www.materialised.shop/" target="_blank">
-            <img src="./images/materialised.png" alt="materialised website" class="project-screenshot">
-          </a>
-          <div class="project-details">
-            <div class="project-text">
-              <h2>Materialised</h2>
-              <p>My final project at Le Wagon, built by 4 of us in less than 2 weeks.</p>
-              <h5>BUILT WITH:</h5>
+
+        <div class="project-details">
+          <div class="project-text">
+            <h2>Materialised</h2>
+            <p>Final fullstack project built at Le wagon with 3 other students. I pitched the idea, led the project and presented the product at the end of the course. We collaborated through <strong>Github</strong> and <strong>Slack</strong>.</p>
+            <h5>BUILT WITH:</h5>
               <ul>
                 <li>HTML, CSS, Bootstrap</li>
                 <li>Ruby on Rails</li>
+                <li>MySQL</li>
                 <li>Javascript & StimulusJS</li>
-                <li>Mapbox API</li>
-                <li>Stripe API</li>
+                <li>API integration (Mapbox & Stripe)</li>
               </ul>
-            </div>
-            <div class="project-links">
-              <ul class="project-icons">
-                <li>
-                  <a href="https://www.figma.com/file/aijesEpK6OLA5Nu1uZ6ijM/Materialised?node-id=0%3A1&t=jOjBXwPQIhCaNOzK-1" target="_blank" >
-                    <i class="fa-brands fa-figma"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://github.com/sbloxy123/materialised" target="_blank" >
-                    <i class="fa-brands fa-github"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.materialised.shop/" target="_blank" >
-                    <i class="fa-solid fa-globe"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
+
+          </div>
+          <div class="project-links">
+            <ul class="project-icons">
+              <li>
+                <a href="https://www.youtube.com/watch?v=O-verHIhV88" target="_blank" >
+                  <i class="fa-brands fa-youtube"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.figma.com/file/aijesEpK6OLA5Nu1uZ6ijM/Materialised?node-id=0%3A1&t=jOjBXwPQIhCaNOzK-1" target="_blank" >
+                  <i class="fa-brands fa-figma"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/sbloxy123/materialised" target="_blank" >
+                  <i class="fa-brands fa-github"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.materialised.shop/" target="_blank" >
+                  <i class="fa-solid fa-globe"></i>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
+      </div>
+
+        <!-- project 2 -->
+
+        <div class="project-container">
+          <a href="https://www.bloxywebservices.co.uk/" target="_blank">
+            <img src="./images/bloxy.png" alt="bloxy Web Services website" class="project-screenshot">
+          </a>
+            <div class="project-details">
+              <div class="project-text">
+                <h2>Bloxy Web Services</h2>
+                <p>My personal website which I built before starting at Le Wagon.</p>
+                <h5>BUILT WITH:</h5>
+                <ul>
+                  <li>HTML, CSS, Bootstrap</li>
+                  <li>GatsbyJS (React framework)</li>
+                  <li>Font Awesome</li>
+                  <li>Google Analytics</li>
+                  <li>Responsive CSS</li>
+                  <li><em>Hosted on Netlify</em></li>
+                </ul>
+              </div>
+              <div class="project-links">
+                <ul class="project-icons">
+                  <li>
+                    <a href="https://www.figma.com/file/avWmzwYv5EyhhBkxX4RsgY/My-Portfolio-Site?node-id=0%3A1&t=UscVUeTL5Ll7HiAK-1" target="_blank" >
+                      <i class="fa-brands fa-figma"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/sbloxy123/my-portfolio-code." target="_blank" >
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.bloxywebservices.co.uk/" target="_blank" >
+                      <i class="fa-solid fa-globe"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         <!-- project 3 -->
         <div class="project-container">
           <a href="https://suspicious-visvesvaraya-d96526.netlify.app/" target="_blank">
@@ -149,14 +188,15 @@
           <div class="project-details">
             <div class="project-text">
               <h2>Bryan Johnston Cichlids</h2>
-              <p>I built this site prior to the bootcamp. Client wanted a place to showcase his unique fish to his customers, alongside his social media accounts.</p>
+              <p>My client, Bryan wanted a place to showcase his unique fish to his customers, alongside his social media accounts and needed to manage the content himself</p>
               <h5>BUILT WITH:</h5>
               <ul>
                 <li>HTML, CSS, Bootstrap</li>
                 <li>GatsbyJS (React framework)</li>
                 <li>Strapi CMS</li>
                 <li>GraphQL</li>
-                <li>Netlify (Hosting)</li>
+                <li>Responsive CSS</li>
+                <li><em>Website hosted on Netlify, Strapi hosted on Heroku</em></li>
               </ul>
             </div>
             <div class="project-links">
@@ -187,8 +227,8 @@
           </a>
           <div class="project-details">
             <div class="project-text">
-              <h2>Lave & Blossom</h2>
-              <p>A website to showcase Lace & Blossom’s gift products.</p>
+              <h2>Lace & Blossom</h2>
+              <p>A website to showcase a variety Lace & Blossom’s gift products.</p>
               <h5>BUILT WITH:</h5>
               <ul>
                 <li>HTML, CSS, Bootstrap</li>
@@ -196,6 +236,8 @@
                 <li>Strapi CMS</li>
                 <li>GraphQL</li>
                 <li>Font Awesome</li>
+                <li>Responsive CSS</li>
+                <li><em>Website hosted on Netlify, Strapi hosted on Heroku</em></li>
               </ul>
             </div>
             <div class="project-links">
