included instagram API

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <ul>
                 <li>HTML, CSS, Bootstrap</li>
                 <li>GatsbyJS (React framework)</li>
-                <li>Strapi CMS</li>
+                <li>Strapi CMS & Instagram API</li>
                 <li>GraphQL</li>
                 <li>Responsive CSS</li>
                 <li><em>Website hosted on Netlify, Strapi hosted on Heroku</em></li>
