added redirection to new site

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>Stuart Bloxham</title>
+    <meta
+      http-equiv="refresh"
+      content="3; url =
+    https://www.stuartbloxham.tech"
+    />
     <meta name="description" content="Profile page" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -430,4 +435,5 @@
       </div>
     </footer>
   </body>
+  <script src="index.js"></script>
 </html>
