fix redirection to new site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Stuart Bloxham</title>
     <meta
       http-equiv="refresh"
-      content="3; url =
+      content="0; URL=
     https://www.stuartbloxham.tech"
     />
     <meta name="description" content="Profile page" />
