added modal to redirect users

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Stuart Bloxham</title>
-    <meta
+    <!-- <meta
       http-equiv="refresh"
       content="0; URL=
     https://www.stuartbloxham.tech"
-    />
+    /> -->
     <meta name="description" content="Profile page" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,7 +25,7 @@
 
   <body>
     <!-- navbar -->
-    <div class="navbar-style">
+    <nav class="navbar-style">
       <div class="container">
         <div class="footer-content">
           <div class="my-name me-auto">
@@ -68,7 +68,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </nav>
 
     <!-- intro -->
 
