--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       content="0; URL=
     https://www.stuartbloxham.tech"
     /> -->
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="pragma" content="no-cache" />
     <meta name="description" content="Profile page" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
