--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Stuart Bloxham</title>
-    <!-- <meta
+    <meta
       http-equiv="refresh"
-      content="0; URL=
+      content="5; URL=
     https://www.stuartbloxham.tech"
-    /> -->
+    />
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="expires" content="0" />
     <meta http-equiv="pragma" content="no-cache" />
